LU-4728 mdt: fix NULL deference of mdt_fid_lock

When enabling hsm_control, mti_exp field of struct mdt_thread_info
could be NULL.  ldlm_cli_enqueue_local will crash the kernel when
dereference it.

Lustre commit: 	0eca7d92e4a84cc6ea2ca9975d2d3b4cef17a686
Lustre change: http://review.whamcloud.com/9543

Change-Id: Iba41a8e646a2fad7f009934d8bf1b67930a98f70
Signed-off-by: Li Xi <lixi@ddn.com>
Reviewed-on: http://review.whamcloud.com/9707
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>